maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:44: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:51: error: identifier expected but '}' found.
}
^